[package]
name = "plume_poseidon"
version = "0.0.0"
edition = "2024"

[dependencies]
plume_arkworks = "^0.0.4"
plume_bn254 = {git = "https://github.com/plume-sig/bn254"}

# ark-bn254 = "*"
ark-ff = "*"
# ark-ec = "*"

# synced to the `ark-std` version from `ark-ff`
rand = {version = "0.8.5", features = ["getrandom"]} 